--- a/app/views/layout/base.twig
+++ b/app/views/layout/base.twig
@@ -3,7 +3,13 @@
 <head>
 <title>{% block title %}{% endblock %}</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-{% block styles %}{% endblock %}
+{% block styles %}
+    {{ vite([
+        'resources/js/app.js',
+        'resources/css/tailwind.css',
+        'resources/css/fonts.css',
+    ]) }}
+{% endblock %}
 </head>
 <body>
 {% block body %}{% endblock %}
